# rovio_ws

./: .gitignore  JETSON_QUICKSTART.md  README.md  SETUP_GUIDE_COMPLETE.md  publishpx4.md  run_d435i_rovio_headless.sh  run_d435i_rovio_headless_flu.sh  start_rovio_jetson.sh  stop_rovio_jetson.sh
install/: local_setup.sh  setup.sh
install/rovio/include/rovio/: Camera.hpp  FeatureCoordinates.hpp  FeatureDistance.hpp  FeatureManager.hpp  FeatureStatistics.hpp  FilterStates.hpp  HealthMonitor.hpp  ImagePyramid.hpp  ImgUpdate.hpp  ImuPrediction.hpp  MultiCamera.hpp  MultilevelPatch.hpp  MultilevelPatchAlignment.hpp  Patch.hpp  PoseUpdate.hpp  RobocentricFeatureElement.hpp  RovioFilter.hpp  RovioNode.hpp  RovioScene.hpp  Scene.hpp  VelocityUpdate.hpp  ZeroVelocityUpdate.hpp  exceptions.hpp  featureTracker.hpp
install/rovio/lib/rovio/: feature_tracker_node  rovio_node  rovio_rosbag_loader
log/: latest_build
scripts/: jetson_performance.sh  monitor_realtime.sh
src/rovio/: CMakeLists.txt  README.md
src/rovio/cfg/: d435i_config.yaml  d435i_config.yaml_new  d435i_jetson_config.yaml
src/rovio/doc/: JETSON_CHANGES_VI.md  JetsonSetup.md
src/rovio/launch/: ros2_d435i_rovio_launch.py  ros2_rovio_node_launch.py  ros2_rovio_rosbag_loader_launch.py
src/rovio/scripts/: qos_relay.py  rovio_commands.sh
src/rovio_interfaces/: CMakeLists.txt  LICENSE  README.md
src/rovio_qos_relay/: package.xml  setup.cfg  setup.py
src/rovio_qos_relay/rovio_qos_relay/: d435i_to_rovio_relay.py  rovio_odom_to_flu.py  rovio_to_mavros_odometry.py
tools/: dummy_pub.py
(+138 files in other folders)
