<?xml version="1.0"?>
<package format="3">
  <name>rovio_qos_relay</name>
  <version>0.0.1</version>
  <description>QoS relay for RealSense D435i to ROVIO</description>
  <maintainer email="hann@example.com">hann</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
